finally moving videos & assets off stanford.

--- a/technology.html
+++ b/technology.html
@@ -126,7 +126,7 @@ strong { font-weight:bold }
 			<param name="bgcolor" value="#3558A1" />
 			<param name="allowScriptAccess" value="sameDomain" />
 			<param name="allowFullScreen" value="true" />
-			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/automatic.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_green.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/automatic.flv">
+			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/automatic.jpg&playButtonSkin=/videos/play_green.png&movieURL=/videos/automatic.flv">
 			<embed src="/flash/ZVSlimPlayer.swf" quality="high" bgcolor="#3558A1"
 				width="200" height="110" name="test" align="middle"
 				play="true"
@@ -134,7 +134,7 @@ strong { font-weight:bold }
 				quality="high"
 				allowScriptAccess="sameDomain"
 				allowFullScreen="true"
-				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/automatic.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_green.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/automatic.flv",
+				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/automatic.jpg&playButtonSkin=/videos/play_green.png&movieURL=/videos/automatic.flv",
 				type="application/x-shockwave-flash"
 				pluginspage="http://www.adobe.com/go/getflashplayer">
 			</embed>
@@ -153,7 +153,7 @@ strong { font-weight:bold }
 			<param name="bgcolor" value="#3558A1" />
 			<param name="allowScriptAccess" value="sameDomain" />
 			<param name="allowFullScreen" value="true" />
-			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/movement.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_yellow.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/movement.flv">
+			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/movement.jpg&playButtonSkin=/videos/play_yellow.png&movieURL=/videos/movement.flv">
 			<embed src="/flash/ZVSlimPlayer.swf" quality="high" bgcolor="#3558A1"
 				width="200" height="110" name="test" align="middle"
 				play="true"
@@ -161,7 +161,7 @@ strong { font-weight:bold }
 				quality="high"
 				allowScriptAccess="sameDomain"
 				allowFullScreen="true"
-				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/movement.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_yellow.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/movement.flv",
+				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/movement.jpg&playButtonSkin=/videos/play_yellow.png&movieURL=/videos/movement.flv",
 				type="application/x-shockwave-flash"
 				pluginspage="http://www.adobe.com/go/getflashplayer">
 			</embed>
@@ -180,7 +180,7 @@ strong { font-weight:bold }
 			<param name="bgcolor" value="#3558A1" />
 			<param name="allowScriptAccess" value="sameDomain" />
 			<param name="allowFullScreen" value="true" />
-			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/occlusion.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_red.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/occlusion.flv">
+			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/occlusion.jpg&playButtonSkin=/videos/play_red.png&movieURL=/videos/occlusion.flv">
 			<embed src="/flash/ZVSlimPlayer.swf" quality="high" bgcolor="#3558A1"
 				width="200" height="110" name="test" align="middle"
 				play="true"
@@ -188,7 +188,7 @@ strong { font-weight:bold }
 				quality="high"
 				allowScriptAccess="sameDomain"
 				allowFullScreen="true"
-				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/occlusion.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_red.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/occlusion.flv",
+				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/occlusion.jpg&playButtonSkin=/videos/play_red.png&movieURL=/videos/occlusion.flv",
 				type="application/x-shockwave-flash"
 				pluginspage="http://www.adobe.com/go/getflashplayer">
 			</embed>
@@ -207,7 +207,7 @@ strong { font-weight:bold }
 			<param name="bgcolor" value="#3558A1" />
 			<param name="allowScriptAccess" value="sameDomain" />
 			<param name="allowFullScreen" value="true" />
-			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/dynamic.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_orange.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/dynamic.flv">
+			<param name="FlashVars" value="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/dynamic.jpg&playButtonSkin=/videos/play_orange.png&movieURL=/videos/dynamic.flv">
 			<embed src="/flash/ZVSlimPlayer.swf" quality="high" bgcolor="#3558A1"
 				width="200" height="110" name="test" align="middle"
 				play="true"
@@ -215,7 +215,7 @@ strong { font-weight:bold }
 				quality="high"
 				allowScriptAccess="sameDomain"
 				allowFullScreen="true"
-				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=http://zunavision.stanford.edu/videodata/adServer/website/dynamic.jpg&playButtonSkin=http://zunavision.stanford.edu/videodata/adServer/player/play_orange.png&movieURL=http://zunavision.stanford.edu/videodata/adServer/website/dynamic.flv",
+				FlashVars="playerWidth=200&playerHeight=110&playerMode=slimMode&previewImage=/videos/dynamic.jpg&playButtonSkin=/videos/play_orange.png&movieURL=/videos/dynamic.flv",
 				type="application/x-shockwave-flash"
 				pluginspage="http://www.adobe.com/go/getflashplayer">
 			</embed>
